Update and rename biologi.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB dark mode & light mode</title>
-    <link rel="stylesheet" href="indexbiologi.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="div-utama">
     <div class="kartu">
@@ -38,6 +38,6 @@
             <button>Ubah Mode</button>
         </div>
      </div>
-     <script src="javamode.js"></script>
+     <script src="script.js"></script>
 </body>
 </html>
